dev core success. 使用方式变更 任务声明注解标注在方法上更加简便 默认禁用组件 使用注解启用 配置方式调整 允许使用注解配置启动(线程池部分尚未完成) 执行方式调整不在依赖APO 执行对象 支持异步唤醒 web控制方法更新不再需要继承StartController 控制方法为 /tmc/{core}/{指令} 任务代码变为必填项 部分工具更新 注释更新

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 logging:
-  level: info
-  level.com.zt.thrad: debug
+  level: debug
+  level.com.task.core: debug
 server:
   port: 8003
   tomcat:
